public/css/src/seek/seek.css
.pac-container {
    z-index: 99999999;
    display: block;
    box-shadow: none;
    border: 1px solid #ccc;
    background: rgb(255, 255, 255);
    border-bottom: 1px solid #E4E4E4;
    box-shadow: 0 0 1px #e4e4e4;
    padding: 15px;
    border-radius: 2px 2px 0 0;
    margin-top: 5px;
}

.item-name {}

.pac-item {
    cursor: pointer;
    padding: 4px 10px;
}

.pac-container:after {
    background-image: none!important;
    color: #ccc;
    font-size: 10px;
}

.pac-item:first-of-type {
    border-top: none;
    background: #fcfcfc;
}

.pac-item-query {
    font-size: 14px;
    margin-right: 4px;
    color: #191919;
}


/* Override */

.seek-profile-places.pac-container {}

.seek-profile-places .pac-item {}

.seek-profile-places .pac-item-query {}


/* Override for login */

.seek-login-places.pac-container {
    border: none;
    box-shadow: none;
    padding: 30px;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}

.seek-login-places .pac-item {
    border-color: #ececec;
    height: 50px;
    border-radius: 2px;
    display: flex;
    align-items: center;
    width: 384px;
    padding-left: 16px;
}

.seek-login-places .pac-item:first-of-type {
    background: inherit;
}

.seek-login-places .pac-item:hover {
    background: #fbfbfb;
}

.seek-login-places .pac-item-query {
    font-weight: 200;
    font-size: 13px;
}

.seek-login-places .pac-icon {
    display: none;
}

.seek-login-places .pac-matched {}


/* Override for map browser */

.seek-map-browser-places.pac-container {
    background: none;
    color: black;
    background: white;
    border: none;
    box-shadow: none;
    top: auto;
    position: fixed!important;
    bottom: 80px!important;
    top: auto!important;
    right: 86px!important;
    left: auto!important;
    border-radius: 10px 10px 0 0;
}

.seek-map-browser-places .pac-item {
    border-color: transparent;
    margin: 0px 0px;
    border-radius: 4px;
    color: #919191;
    padding: 2px 10px;
}

.seek-map-browser-places .pac-item:first-of-type {
    background: inherit;
}

.seek-map-browser-places .pac-item:hover {
    background: rgba(238, 238, 238, 0.34);
}

.seek-map-browser-places .pac-item-query {
    color: black;
    font-size: 12px;
}

.seek-map-browser-places .pac-icon {
    opacity: 1;
    color: black;
}

.seek-map-browser-places .pac-matched {
    font-weight: 700;
}


/* Override for before create */

.seek-be-create.pac-container {}

.seek-be-create .pac-item:nth-of-type(4),
.seek-be-create .pac-item:nth-of-type(5) {
    display: none;
}

.seek-be-create .pac-item:first-of-type {}

.seek-be-create .pac-item:hover {}

.seek-be-create .pac-item-query {
    font-size: 12px;
    font-family: 'Open sans';
}

.seek-be-create .pac-icon {
    display: none;
}

.seek-be-create .pac-matched {
    font-weight: 700;
}

